--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ white-space: nowrap;
  }
  .badge--small {
      font-size: 1.6rem;
+     padding: 0.5rem 1.5rem;
  }
  @media screen and (min-width: 1024px){
    .badge {
@@ -236,4 +237,54 @@ color: #fff;
 .card--secondary .card__header {
     background: var(--color-secondary);
     color: #fff;
+}
+.card--secondary .badge--secondary {
+    background: #02cdf1;
+}
+/* Plans */
+.plan__name {
+color: #fff;
+margin: 0;
+font-weight: 500;
+font-size: 2.4rem;
+}
+.plan__price {
+    font-size: 6rem;
+}
+.plan__billing-cycle {
+    font-size: 2.4rem;
+    font-weight: 300;
+    opacity: 0.8;
+    margin-right: 1rem;
+}
+.plan__description {
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+}
+.plan .list__item {
+    margin-bottom: 2rem;
+}
+.plan--popular .card__header {
+    position: relative;
+}
+.plan--popular .card__header::before {
+    content: url(../images/Popular.svg);
+    width: 506px;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 5%;
+}
+@media screen and (min-width: 1024px) {
+    .plan__name {
+        font-size: 1.4rem;
     }
+    .plan__price {
+        font-size: 5rem;
+    }
+    .plan__billing-cycle {
+        font-size: 1.6rem;
+    }
+}
