--- a/css/style.css
+++ b/css/style.css
@@ -288,3 +288,16 @@ font-size: 2.4rem;
         font-size: 1.6rem;
     }
 }
+/* Media */
+.media {
+    display: flex;
+}
+.media__title {
+    margin-top: 0;
+}
+.media__body {
+    margin: 0 2rem;
+}
+.media__image {
+    margin-top: 1rem;
+}
