--- a/css/style.css
+++ b/css/style.css
@@ -342,3 +342,12 @@ font-size: 2.4rem;
         font-size: 1.6rem;
     }
 }
+/* Grids */
+.grid {
+    display: grid;
+}
+@media screen and (min-width: 768px) {
+    .grid--1x3 {
+        grid-template-columns: repeat(3, 1fr)
+    }
+}
