--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,15 @@ white-space: nowrap;
      width: 40px;
      height: 40px;
  }
+ .icon--small {
+     width: 30px;
+     height: 30px;
+ }
  .icon--primary {
      fill: var(--color-primary)
+ }
+ .icon--white {
+     fill: #fff;
  }
  .icon-container {
      background: #f3f9fa;
@@ -140,6 +147,9 @@ white-space: nowrap;
      display: inline-flex;
      justify-content: center;
      align-items: center;
+ }
+ .icon-container--accent {
+     background: var(--color-accent);
  }
  .btn {
      border-radius: 40px;
@@ -347,7 +357,32 @@ font-size: 2.4rem;
     display: grid;
 }
 @media screen and (min-width: 768px) {
-    .grid--1x3 {
-        grid-template-columns: repeat(3, 1fr)
+    .grid--1x2 {
+        grid-template-columns: repeat(2, 1fr)
+    }
+}
+/* Testimonials */
+.testimonial {
+    padding: 3rem;
+}
+.testimonial__image {
+    position: relative;
+}
+.testimonial__image > img {
+    width: 100%;
+}
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+@media screen and (min-width: 768px) {
+    .testimonial .quote, .testimonial .quote__author {
+        font-size: 2.4rem;
+    }
+}
+@media screen and (min-width: 768px) {
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
