--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,10 @@ white-space: nowrap;
      background: var(--color-headings);
      color: #fff;
  }
+ .btn--stretched {
+     padding-left: 6rem;
+     padding-right: 6rem;
+ }
 .btn--block {
     width: 100%;
 display: inline-block;
@@ -384,5 +388,38 @@ font-size: 2.4rem;
 @media screen and (min-width: 768px) {
     .testimonial .quote {
         margin-left: 6rem;
+    }
+}
+/* Callouts */
+.callout {
+    padding: 4rem;
+    border-radius: 5px;
+}
+.callout--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+.callout__heading {
+color: #fff;
+margin-top: 0;
+font-size: 3rem;
+}
+.callout .btn {
+    justify-self: center;
+    align-self: center;
+}
+.callout__content {
+    text-align: center;
+}
+@media screen and (min-width: 768px) {
+    .callout .grid--1x2 {
+        grid-template-columns: 1fr auto;
+    }
+    .callout__content {
+        text-align: left;
+    }
+    .callout .btn {
+        justify-self: start;
+        margin: 0 2rem;
     }
 }
