--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ white-space: nowrap;
      width: 40px;
      height: 40px;
  }
+ 
  .icon--small {
      width: 30px;
      height: 30px;
@@ -422,4 +423,30 @@ font-size: 3rem;
         justify-self: start;
         margin: 0 2rem;
     }
+}
+/* Collapsibles */
+.collapsible__header {
+    display: flex;
+    justify-content: space-between;
+}
+.collapsible__heading {
+    margin-top: 0;
+    font-size: 3rem;
+}
+.collapsible__chevron {
+    transform: rotate(-90deg);
+    transition: transform 0.3s;
+}
+.collapsible__content {
+max-height: 0;
+overflow: hidden;
+opacity: 0;
+transition: all 0.3s;
+}
+.collapsible--expanded .collapsible__chevron {
+    transform: rotate(0);
+}
+.collapsible--expanded .collapsible__content {
+max-height: 100vh;
+opacity: 1;
 }
