--- a/css/style.css
+++ b/css/style.css
@@ -263,10 +263,18 @@ color: #fff;
     background: var(--color-secondary);
     color: #fff;
 }
+.card--primary .badge--primary {
+    background: #126de4;
+    border-radius: var(--border-radius);
+}
 .card--secondary .badge--secondary {
     background: #02cdf1;
+    border-radius: var(--border-radius);
 }
 /* Plans */
+.plan {
+    transition: transform .2s ease-out;
+}
 .plan__name {
 color: #fff;
 margin: 0;
@@ -291,6 +299,9 @@ font-size: 2.4rem;
 .plan .list__item {
     margin-bottom: 2rem;
 }
+.plan--popular {
+    transform: scale(1.1);
+}
 .plan--popular .card__header {
     position: relative;
 }
@@ -301,6 +312,12 @@ font-size: 2.4rem;
     position: absolute;
     top: 0;
     right: 5%;
+}
+.plan:hover {
+    transform: scale(1.05);
+}
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 @media screen and (min-width: 1024px) {
     .plan__name {
@@ -369,6 +386,11 @@ font-size: 2.4rem;
 /* Grids */
 .grid {
     display: grid;
+}
+@media screen and (min-width: 768px) {
+    .grid--1x3 {
+        grid-template-columns: repeat(3, 1fr)
+    }
 }
 @media screen and (min-width: 768px) {
     .grid--1x2 {
@@ -584,4 +606,12 @@ border-radius: 5px;
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
+}
+/* Plans Block */
+.block-plans .grid{
+    gap: 8rem 4rem;
+}
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
 }
