--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
 *, *::after, *::before {
     box-sizing: border-box;
 }
+::selection {
+    background: var(--color-primary);
+    color: #fff;
+}
 html {
     font-size: 62.5%;
 }
@@ -35,6 +39,7 @@ h2 {
 }
 h3 {
     font-size: 3rem;
+    font-weight: 500;
 }
 p {
     margin-top: 0;
@@ -108,7 +113,6 @@ white-space: nowrap;
  .list {
      list-style: none;
      padding-left: 0;
-     color: var(--color-headings);
  }
  .list--inline .list__item {
      display: inline-block;
@@ -117,6 +121,8 @@ white-space: nowrap;
  .list--tick {
      list-style-image: url(../images/tick.svg);
      padding-left: 3rem;
+     color: var(--color-headings);
+
  }
  .list--tick .list__item {
      padding-left: 0.5rem;
@@ -137,7 +143,7 @@ white-space: nowrap;
      height: 30px;
  }
  .icon--primary {
-     fill: var(--color-primary)
+     fill: var(--color-primary);
  }
  .icon--white {
      fill: #fff;
@@ -333,6 +339,7 @@ font-size: 2.4rem;
 /* Media */
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 .media__title {
     margin-top: 0;
@@ -496,16 +503,21 @@ opacity: 1;
     background: #000;
     color: #7b858b;
 }
+.block--dark h1, 
+.block--dark h2, 
+.block--dark h3 {
+    color: #fff;
+} 
 .block--dark .block__heading {
     color: #fff;
 }
 .block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 .block--skewed-left {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 .container {
     max-width: 1140px;
@@ -564,9 +576,7 @@ border-radius: 5px;
     }
 }
 /* Hero */
-.hero {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
+
 .hero__tagline {
     font-size: 2rem;
     color: #b9c3cf;
@@ -632,5 +642,21 @@ margin: 12rem 0;
 @media screen and (min-width: 768px) {
     .feature:nth-of-type(even) .feature__content {
         order: 2;
+    }
+}
+/* Showcase Block */
+.block-showcase__image > img {
+    width: 100%;
+}
+@media screen and (min-width: 768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+    .block-showcase__image {
+        justify-self: end;
+    }
+    .block-showcase__image > img {
+        width: auto;
+        max-width: 700px;
     }
 }
